# mairie_v2

back/: db.sqlite3  pyproject.toml
back/api/: collectionsDB.py  serializers.py  urls.py  views.py
back/serveur/: settings.py  urls.py
front/: package-lock.json  package.json
front/components/: footer.tsx  header.tsx
front/pages/: index.tsx
front/pages/agent/: dashboard.tsx
front/pages/agent/auth/: login.tsx
front/pages/agent/demandes/: deces.tsx  mariage.tsx  naissance.tsx
front/pages/agent/registre/: [id].tsx  deces.tsx  mariage.tsx  naissance.tsx  structure.tsx
front/pages/agent/registre/data-deces/: [id].tsx
front/pages/agent/registre/data-mariage/: [id].tsx
front/pages/agent/registre/data-naissance/: [id].tsx
front/pages/agent/registre/declaration/: deces.tsx  mariage.tsx  naissance.tsx
front/pages/agent/registre/declaration/deces/: index.tsx  step1.tsx  step2.tsx  step3.tsx  step4.tsx
front/pages/agent/registre/declaration/mariage/: index.tsx  step1.tsx  step10.tsx  step11.tsx  step12.tsx  step2.tsx  step3.tsx  step4.tsx  step5.tsx  step6.tsx  step7.tsx  step8.tsx  step9.tsx
front/pages/agent/registre/declaration/naissance/: index.tsx  step3.tsx  step4.tsx
front/pages/demandeurs/: deces.tsx  mariage.tsx  naissance.tsx
front/public/Icons/: chips.gltf
front/styles/: Home.module.css  globals.css
front/styles/agents/: auth.module.css  dashboard.module.css  data.module.css  declaration.module.css  forms.module.css
front/styles/components/: Footer.module.css  Header.module.css
front/styles/demandeur/: form.module.css
(+4 files in other folders)
